--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,6 +17,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Delete</th>
         </tr>
       </thead>
       <tbody>
@@ -24,7 +25,8 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
-          </tr>
+            <td><form method="POST" action="/urls/9sm5xK/delete"><button type="delete" value="Delete">Delete</button></form></td>
+          </tr>  
         <% } %>
       </tbody>
     </table>
