--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -10,29 +10,38 @@
 </head>
 <body>
   <%- include('partials/_header') %>
-  <main style="margin: 1em;">
-    <h3>My URLs</h3>
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">Short URL</th>
-          <th scope="col">Long URL</th>
-          <th scope="col">Edit</th>
-          <th scope="col">Delete</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% for(let url in urls) { %>
+  <% if (users) { %>
+    <main style="margin: 1em;">
+      <h3>My URLs</h3>
+      <table class="table">
+        <thead>
           <tr>
-            <td><%= url %></td>
-            <td><%= urls[url] %></td>
-            <td><form method="GET" action="/urls/<%= url %>"><button type="edit" value="Edit">Edit</button></form></td>
-            <td><form method="POST" action="/urls/<%= url %>/delete"><button type="delete" value="Delete">Delete</button></form></td>
-          </tr>  
-        <% } %>
-      </tbody>
-    </table>
-  </main>
+            <th scope="col">Short URL</th>
+            <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% for(let url of urls) { %>
+            <tr>
+              <td><%= url.shortURL %></td>
+              <td><%= url.longURL %></td>
+              <td><form method="GET" action="/urls/<%= url.shortURL %>"><button type="submit">Edit</button></form></td>
+              <td><form method="POST" action="/urls/<%= url.shortURL %>/delete"><button type="submit">Delete</button></form></td>
+            </tr>  
+          <% } %>
+        </tbody>
+      </table>
+    </main>
+  <% } else { %>
+    <main style="margin: 1em;">
+      <h3>Register or Login to access your URLs</h3>
+    </main>
+  <% } %>
+
+
+
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
