--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -11,8 +11,8 @@
   <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-        <p class="card-text">Short URL: <a href="/urls"><%= shortURL %></a></p>
+        <h5 class="card-title">TinyURL for: <a href="/u/<%= shortURL %>"></a><%= longURL %></a></h5>
+        <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
       </div>
     <div class="card-footer text-muted"></div>
 
@@ -22,7 +22,7 @@
       <form class="form-inline justify-content-center" action="/urls/<%= shortURL %>" method="POST">
         <div class="form-group mb-2">
           <label for="longURL">New URL:</label>
-          <input class="form-control" type="text" name="longURL" placeholder="Type What you want" style="width: 300px; margin: 1em">
+          <input class="form-control" type="text" value="<%= longURL %>" name="longURL"  style="width: 300px; margin: 1em">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </form>
